openshiftnew_backend/dt-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml --provider=openshift
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: dt
  name: dt
spec:
  replicas: 1
  selector:
    io.kompose.service: dt
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: dt
    spec:
      containers:
      - image: ' '
        name: spring
        ports:
        - containerPort: 8081
        resources: {}
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring
      from:
        kind: ImageStreamTag
        name: dt:1.0.0
    type: ImageChange
status: {}
