openshiftnew_backend/app-route-back.yaml
apiVersion: v1
kind: Route
metadata:
  name: dts
spec:
  host: dts.backend.appsrvdev2.conygre.com
  port:
    targetPort: '8081'
  to:
    kind: Service
    name: dts
